--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -18,4 +18,4 @@ mybatis.configuration.map-underscore-to-camel-case=true
 mybatis.mapper-locations=classpath:mapper/*.xml
 
 #??xml?????
-mybatis.type-aliases-package=net.xdclass.online_xdclass.model.domain
+mybatis.type-aliases-package=net.xdclass.online_xdclass.model.entity
